<resources>
    <string name="app_name">BBF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_general">General</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_advanced_settings">Advanced Settings</string>
    <string name="nav_info">Info</string>
    <string name="nav_about">About</string>
    <string name="nav_tips">Tips</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="general_fragment">General Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="battery_status">Battery Status</string>
    <string name="battery_level">Battery Level</string>
    <string name="temperature">Temperature</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="battery_technology">Battery Technology</string>
</resources>
