<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_general" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_advanced_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_advanced_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_tips"
            android:title="@string/nav_tips" />
    </group>
</menu>
